
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sigaction {int sa_flags; int sa_sigaction; } ;
typedef int pthread_t ;


 int SA_NODEFER ;
 int SA_SIGINFO ;
 int SIGSEGV ;
 int do_ldt () ;
 int err (int,char*) ;
 int handle_segv ;
 int ldt_thread ;
 scalar_t__ pthread_create (int *,int *,int ,int *) ;
 scalar_t__ sigaction (int ,struct sigaction*,int *) ;

int main(void) {
  do_ldt();
  pthread_t thread;
  if (pthread_create(&thread, ((void*)0), ldt_thread, ((void*)0))) err(1, "pthread create");

  struct sigaction act = {
    .sa_sigaction = handle_segv,
    .sa_flags = SA_NODEFER|SA_SIGINFO
  };
  if (sigaction(SIGSEGV, &act, ((void*)0))) err(1, "sigaction");

  while (1) {
    unsigned long mpx_bounds[2] = { 5, 6 };
    unsigned long old_bounds[2];
    asm volatile(
      "bndmov %%bnd0, (%0)\n"
      "bndmov (%2), %%bnd0\n"
      "mov %1, %%fs\n"
      "bndcl %%fs:(%3), %%bnd0\n"
      "bndcn %%fs:(%3), %%bnd0\n"
      "post_bounds_label:\n"
      "bndmov (%0), %%bnd0\n"
    :
    :
      "r"(old_bounds),
      "r"(0x7),
      "r"(mpx_bounds),
      "r"(0x0UL)
    );
  }
}
