; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_47015.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_47015.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sigaction = type { i32, i32 }

@ldt_thread = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"pthread create\00", align 1
@SA_NODEFER = common dso_local global i32 0, align 4
@SA_SIGINFO = common dso_local global i32 0, align 4
@handle_segv = common dso_local global i32 0, align 4
@SIGSEGV = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"sigaction\00", align 1
@__const.main.mpx_bounds = private unnamed_addr constant [2 x i64] [i64 5, i64 6], align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca %struct.sigaction, align 4
  %4 = alloca [2 x i64], align 16
  %5 = alloca [2 x i64], align 16
  store i32 0, i32* %1, align 4
  %6 = call i32 (...) @do_ldt()
  %7 = load i32, i32* @ldt_thread, align 4
  %8 = call i64 @pthread_create(i32* %2, i32* null, i32 %7, i32* null)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %0
  %11 = call i32 @err(i32 1, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %10, %0
  %13 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %3, i32 0, i32 0
  %14 = load i32, i32* @SA_NODEFER, align 4
  %15 = load i32, i32* @SA_SIGINFO, align 4
  %16 = or i32 %14, %15
  store i32 %16, i32* %13, align 4
  %17 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %3, i32 0, i32 1
  %18 = load i32, i32* @handle_segv, align 4
  store i32 %18, i32* %17, align 4
  %19 = load i32, i32* @SIGSEGV, align 4
  %20 = call i64 @sigaction(i32 %19, %struct.sigaction* %3, i32* null)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %12
  %23 = call i32 @err(i32 1, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  br label %24

24:                                               ; preds = %22, %12
  br label %25

25:                                               ; preds = %24, %25
  %26 = bitcast [2 x i64]* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %26, i8* align 16 bitcast ([2 x i64]* @__const.main.mpx_bounds to i8*), i64 16, i1 false)
  %27 = getelementptr inbounds [2 x i64], [2 x i64]* %5, i64 0, i64 0
  %28 = getelementptr inbounds [2 x i64], [2 x i64]* %4, i64 0, i64 0
  call void asm sideeffect "bndmov %bnd0, ($0)\0Abndmov ($2), %bnd0\0Amov $1, %fs\0Abndcl %fs:($3), %bnd0\0Abndcn %fs:($3), %bnd0\0Apost_bounds_label:\0Abndmov ($0), %bnd0\0A", "r,r,r,r,~{dirflag},~{fpsr},~{flags}"(i64* %27, i32 7, i64* %28, i64 0) #3, !srcloc !2
  br label %25
}

declare dso_local i32 @do_ldt(...) #1

declare !callback !3 dso_local i64 @pthread_create(i32*, i32*, i32, i32*) #1

declare dso_local i32 @err(i32, i8*) #1

declare dso_local i64 @sigaction(i32, %struct.sigaction*, i32*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 884, i32 915, i32 945, i32 968, i32 1002, i32 1036, i32 1065}
!3 = !{!4}
!4 = !{i64 2, i64 3, i1 false}
